new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -82,7 +82,7 @@
         <div class="pb-logo">
 
             <a href="/" title="CodeAdvantage ">
-                <img src="/CA/CA/images/logor.png" alt="CodeAdvantage "/>
+                <img src="/CA/images/logor.png" alt="CodeAdvantage "/>
             </a>
 
         </div>
@@ -326,7 +326,7 @@
     <div class="theme-page-content theme-clear-fix">
         <section id="onlinePageHeader" class="sectionheader">
             <video class="video" loop="loop" autoplay="" muted="">
-                <source src="/uploads/online-header.mov" type="video/mp4" />
+                <source src="/CA/uploads/online-header.mov" type="video/mp4" />
             </video>
             <div class="container">
                 <div class="rows">
@@ -445,7 +445,7 @@
                     </article>
                     <aside>
                         <div class="sideBanner">
-                            <img class="sideBanner__up" src="/uploads/boy_600x423.jpg" alt="CodeAdvantage Parent">
+                            <img class="sideBanner__up" src="/CA/uploads/boy_600x423.jpg" alt="CodeAdvantage Parent">
                             <div class="sideBanner__down textCenter">
                                 <p>
                                     <i>
@@ -468,7 +468,7 @@
                         <div class="sideBanner">
                             <div class="sideBanner__up">
                                 <a class="vp-a" href="https://www.youtube.com/watch?v=YVH1QVftvpo">
-                                    <img class="vp-img" src="/uploads/vc-play3.png"  alt="CA Online Classes">
+                                    <img class="vp-img" src="/CA/uploads/vc-play3.png"  alt="CA Online Classes">
                                 </a>
                             </div>
                             <div class="sideBanner__down textCenter">
@@ -504,16 +504,16 @@
                                 <img class="alignnone size-medium wp-image-2137" src="/CA/uploads/Times-Out-1-300x300.png" alt="Time Out New York" width="100" height="100" />
                             </a>
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2136" src="/CA//uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
+                                <img class="alignnone size-medium wp-image-2136" src="/CA/uploads/PBS-300x300.jpg" alt="Public Broadcasting Service" width="100" height="100" />
                             </a>
                             <a href="" target="_blank">
-                                <img class="alignnone size-medium wp-image-2133" src="/CA//uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
+                                <img class="alignnone size-medium wp-image-2133" src="/CA/uploads/Mommy-Poppins-300x300.jpg" alt="Mommy Poppins New Jersey" width="100" height="100"  />
                             </a>
                         </div>
                     </article>
                 </div>
                 <div class="rows">
-                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA//uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
+                    <img class="size-medium wp-image-2206 aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
                 </div>
             </div>
         </section>
@@ -1086,10 +1086,10 @@
                         <h3 class="h4 orangeText mb-middle">Our Principal</h3>
                         <div class="textWithImgBlock mb-middle">
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/scratchjr-450x450.png" alt="Scratch Jr"/>
+                                <img src="/CA/uploads/Rebecca-Mancini.jpg" alt="Rebecca Mancini"/>
                                 <div class="imgWithCaptionBlock__title">
-                                    <a href="/online/scratch-jr" target="_blank">Scratch Jr</a>
-                                    <p>Grades K-2nd</p>
+                                    <a target="_blank">Erica Chodkowski</a>
+                                    <p>Principal of our Virtual classes</p>
                                 </div>
                             </div>
                             <div class="textWithImgBlock__text">
