new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -1106,7 +1106,7 @@
                             </div>
                         </div> 
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/uploads/teacher_550х550.jpg" alt="Rock Star Instructors">
+                            <img class="rounded" src="/CA/uploads/teacher_550х550.jpg" alt="Rock Star Instructors">
                             <div class="textWithImgBlock__text">
                                 <h3 class="h4 orangeText">Rock Star Instructors</h3>
                                 <p>
@@ -1115,7 +1115,7 @@
                             </div>
                         </div>    
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/uploads/girl_550х550.jpg" alt=" Kid-tested Curriculum">
+                            <img class="rounded" src="/CA/uploads/girl_550х550.jpg" alt=" Kid-tested Curriculum">
                             <div class="textWithImgBlock__text">
                                 <h3 class="h4 orangeText">
                                     Kid-tested Curriculum
@@ -1126,7 +1126,7 @@
                             </div>
                         </div>   
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/uploads/girl_550х550.jpg" alt=" Supportive/Fun Environment">
+                            <img class="rounded" src="/CA/uploads/girl_550х550.jpg" alt=" Supportive/Fun Environment">
                             <div class="textWithImgBlock__text">
                                 <h3 class="h4 orangeText">
                                     Supportive/Fun Environment
