new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -688,7 +688,7 @@
                                         {% set minOneWeek = min(item.price, minOneWeek) %}
                                     {% endfor %} -->
 
-                                    starting at <span>555$</span>                                                            
+                                    starting at <span style="color:#FE6500">555$</span>                                                            
                                 </h4>
                                 <p>All camps run Monday-Friday (except for holidays) </p>
                                 <p class="downArr"> <b>Click here to see schedule </b></p>
@@ -2245,7 +2245,7 @@
                                         {% set minTwoWeek = min(item.price, minTwoWeek) %}
                                     {% endfor %}
              -->
-                                    starting at <span> 555$ </span>  
+                                    starting at <span style="color:#FE6500"> 555$ </span>  
                             
                                 </h4>
                                 <p>All camps run Monday-Friday (except for holidays) </p>
@@ -3802,7 +3802,7 @@
                                     {% set minSections = min(item.price, minSections) %}
                                 {% endfor %}
                                  -->
-                                starting at <span> $555</span>
+                                starting at <span style="color:#FE6500"> $555</span>
                             
                                 </h4>
 
