new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -618,6 +618,15 @@
                                     <p>Grades 3rd-5th</p>
                                 </div>
                             </div>
+
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/robotics-earthbots-600-1.jpg" alt="Robotics"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <a href="/classes/robotics" target="_blank">Robotics</a>
+                                    <p>Grades 3rd-5th</p>
+                                </div>
+                            </div>
+
                         </div>  
                         <h4 class="h4">Classes for 5th-8th+ graders</h4>
                         <div class="classesBlocks">
@@ -657,6 +666,14 @@
                                 <img src="/CA/uploads/roblox02.png" alt="Roblox Code"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-code" target="_blank">Roblox Code</a>
+                                    <p>Grades 3rd-5th</p>
+                                </div>
+                            </div>
+
+                            <div class="imgWithCaptionBlock">
+                                <img src="/CA/uploads/robotics.png" alt="Robotics"/>
+                                <div class="imgWithCaptionBlock__title">
+                                    <a href="/classes/robotics" target="_blank">Robotics</a>
                                     <p>Grades 3rd-5th</p>
                                 </div>
                             </div>
