new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -671,7 +671,7 @@
                             </div>
 
                             <div class="imgWithCaptionBlock">
-                                <img src="/CA/uploads/robotics.png" alt="Robotics"/>
+                                <img src="/CA/uploads/Robotics.png" alt="Robotics"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/classes/robotics" target="_blank">Robotics</a>
                                     <p>Grades 3rd-5th</p>
@@ -682,7 +682,7 @@
                 </div>
 
 
-                
+
                 <div class="rows">
                     <article>
                         <blockquote class="blockquote textCenter">
