new online page

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -5424,7 +5424,7 @@
                             </div>
                         </div>    
                         <div class="textWithImgBlock">
-                            <img class="rounded" src="/CA/uploads/girl_550х550.jpg" alt=" Kid-tested Curriculum">
+                            <img class="rounded" src="/CA/uploads/scratch_550x550.png" alt=" Kid-tested Curriculum">
                             <div class="textWithImgBlock__text">
                                 <h3 class="h4 orangeText">
                                     Kid-tested Curriculum
