search page data

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -205,6 +205,9 @@
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
         <a href="/contact"><span></span>Contact</a>
     </li>
+    <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
+        <a class="orangeText" href="#"><span></span>FREE TRIAL</a>
+    </li>
 </ul>
 </div>
 <div class="submenuWrapper">
