--- a/css/style7.css
+++ b/css/style7.css
@@ -1293,6 +1293,13 @@ aside {
     font-size: 1.25rem;
   }
 
+  #onlinePageHeader .btn:hover {
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
+    z-index: 9999999;
+    font-size: 1.25rem;
+  }
+
   .callToAction{
     display: flex;
     justify-content: space-between;
