search page data

--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -206,7 +206,7 @@
                     <a href="/CA/contact"><span></span>Contact</a>
                 </li>
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-                    <a class="orangeText" href="#"><span></span>FREE TRIAL</a>
+                    <a class="orangeText" href="#"><span></span> <strong>FREE TRIAL</strong> </a>
                 </li>
             </ul>
         </div>
