--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -206,7 +206,7 @@
         <a href="/contact"><span></span>Contact</a>
     </li>
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-        <a class="orangeText" href="#"><span></span>FREE TRIAL</a>
+        <a class="orangeText" href="#"><span></span> <strong>FREE TRIAL</strong> </a>
     </li>
 </ul>
 </div>
@@ -618,7 +618,7 @@
                                 <img src="/CA/uploads/roblox03.png" alt="Roblox Code"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-code" target="_blank">Roblox Code</a>
-                                    <p>Grades 3rd-5th</p>
+                                    <p>Grades 4th-6th </p>
                                 </div>
                             </div>
 
@@ -669,7 +669,7 @@
                                 <img src="/CA/uploads/roblox02.png" alt="Roblox Code"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/online/roblox-code" target="_blank">Roblox Code</a>
-                                    <p>Grades 3rd-5th</p>
+                                    <p>Grades 4th-6th</p>
                                 </div>
                             </div>
 
@@ -677,7 +677,7 @@
                                 <img src="/CA/uploads/Robotics.png" alt="Robotics"/>
                                 <div class="imgWithCaptionBlock__title">
                                     <a href="/classes/robotics" target="_blank">Robotics</a>
-                                    <p>Grades 3rd-5th</p>
+                                    <p>Grades 6th-8th</p>
                                 </div>
                             </div>
                         </div> 
