--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,8 @@
-
+body {
+  height: 100vh;
+  background-image: url("/images/wall.PNG");
+  background-size: cover;
+}
 
 /* Popup box BEGIN */
 .hover_bkgr_fricc {
@@ -185,3 +189,4 @@
 .popup .popupContent__popupForm .popupForm__btn:hover {
   background: #FE6500;
 }
+/*# sourceMappingURL=popup.css.map */
