--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -574,7 +574,7 @@
                                             <div class="content">
                                                 <h5>Congratulations Dylan on completing  Python Level 1!</h5>
                                                 <p>In this class you mastered the following skills:</p>
-                                                <ul>
+                                                <ul class="listCheck">
                                                     <li>
                                                         <p>Created basic scripts to run collections of commands</p>
                                                     </li>
