--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -117,6 +117,116 @@
         cursor: pointer;
     }
 }
+
+#techTable{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px!important;
+    overflow: auto!important;
+    box-shadow: 0 0 25px rgba(#E0E0E0,0.9);
+
+    .table {
+        border-spacing: 3!important;
+        border-collapse: collapse!important;
+        overflow: hidden;
+        position: relative;
+        border-radius: 10px;
+        background: white;
+        margin-bottom: 0!important;
+        width: 100%;
+        table-layout: fixed;
+        @media only screen and (max-width: 768px) and (min-width: 0px) {
+            overflow: scroll!important;
+            width: 900px;
+          }
+    }
+
+    thead tr th:first-child,
+    tbody tr td:first-child {
+        width: 40%;
+        min-width: 40%;
+        max-width: 40%;
+        word-break: break-all;
+    }
+
+    table, th, td {
+        border-collapse: collapse;
+      }
+
+    .table td, .table th {
+            padding-left: 8px;
+    }
+    .table thead tr {
+        height: 60px;
+        background: #fe6500;
+    }
+
+    .table thead tr td:first-child {
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        border-left: 3px solid #fe6500;
+    }
+    
+    .table thead tr td:last-child {
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-right: 3px solid #fe6500;
+    }
+
+    .table tbody tr {
+        height: 50px;
+    }
+    
+    .table tbody tr:last-child {
+        border: 0;
+    }
+    .table td, .table th {
+        text-align: left;
+        
+    }
+
+    // .table td{
+    //     width: 100%;
+    // }
+
+    .table thead th{
+        font-size: 18px;
+        color: #fff;
+        line-height: 1.2;
+        font-weight: unset;
+        border-bottom: none!important;
+    }
+    
+    tbody tr:nth-child(even) {
+        background-color: #F8F8F8;
+    }
+    
+    tbody tr {
+        font-size: 15px;
+        color: #808080;
+        line-height: 1.2;
+        font-weight: unset;
+    }
+
+    tbody tr td{
+        border-top: none!important;
+        max-width: 400px;
+
+    }
+
+    
+    tbody tr:hover {
+        color: #555555;
+        background-color: #F0F0F0;
+        cursor: pointer;
+    }        
+    .yes{
+        color: green!important;
+    }
+    .no{
+        color: red!important;
+    }
+}
 ////////////////////////////////////////////////
 .filterTable{
     position: relative;
