--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -359,21 +359,110 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <article>
-                        <h3 class="h3">
+                    <article class="halfColumn">
+                        <h3 class="h3 mb-middle mt-middle">
                             Getting ready for class:
                         </h3>
 
+                        <h5 class="h6 questionLink">
+                            <a href="#">How are your classes taught?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">Do you have LIVE instruction?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">What are the technical requirements? <br> What type of computer does my child need to take class?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">How do I use the portal?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">Do you offer sibling discounts?</a>
+                        </h5>
+
                     </article>
-                    <article>
-                        <h3 class="h3">
-                            Getting ready for class:
+                    <article class="halfColumn">
+                        <h3 class="h3  mb-middle mt-middle">
+                            Class Details: 
                         </h3>
+
+                        <h5 class="h6 questionLink">
+                            <a href="#">How many students are in each online class?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">What will my child learn in the online class? Is there homework? </a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">If my child misses a class, can it be made up? Do you record your class sessions?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">I am having technical difficulty, who can I contact for assistance?</a>
+                        </h5>
+                        <h5 class="h6 questionLink">
+                            <a href="#">Who are the instructors? </a>
+                        </h5>
+
                         
                     </article>
                 </div>
             </div>
         </section>
+        <div class="container">
+            <div class="row">
+                <article class="halfColumn">
+                    <h3 class="h3 mb-middle mt-middle">Class and Level Selection:</h3>
+                    <h5 class="h6 questionLink">
+                        <a href="#">
+                            I am not sure what class to select for my child?
+                         </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        My child has never done coding before, are your classes for beginners?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        My child has prior coding experience, can they start at Level 2 or Level 3?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        Can children in Pre-K and K take coding classes?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        What is the difference between Minecraft Club, Minecraft Java Mods, and Minecraft Modding: Java?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                            What is the difference between Roblox Build and Roblox Code?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        My child loved their class, what should they take next?
+                        </a>
+                    </h5>
+                    <h5 class="h6 questionLink">
+                         <a href="#">
+                        My child loved their instructor, can we get them again for the next class?
+                        </a>
+                    </h5>
+                </article>
+                <article class="halfColumn">
+                    <h3 class="h3 mb-middle mt-middle">Additional Class Options: Private, Semi-Private, and Afterschool:</h3>
+                    <h5 class="h6 questionLink"><a href="#">The scheduled classes don’t work for our schedule, can you create private or semi-private classes?</a></h5>
+                    <h5 class="h6 questionLink"><a href="#">I want to gather a group of my child’s friends to take an online, coding class – is this possible?</a></h5>
+                    <h5 class="h6 questionLink"><a href="#">Do you have afterschool classes that are in person? </a></h5>
+                </article>
+            </div>
+        </div>
 
         <section>  
             <div class="container">
