--- a/css/style7.css
+++ b/css/style7.css
@@ -3981,6 +3981,10 @@ span {
   padding: 30px 0;
 }
 
+article.halfColumn {
+  width: 100%;
+}
+
 aside {
   padding-left: 2em;
   background-color: transparent !important;
@@ -4645,5 +4649,30 @@ aside {
 
 .containerProgress .cardProgress .face.face2 .content h5 {
   color: #4ccef0;
+}
+
+.questionLink {
+  position: relative;
+}
+
+.questionLink a {
+  color: #707070;
+  text-decoration: none;
+  margin-left: 15px;
+}
+
+.questionLink a:before {
+  content: "?";
+  position: absolute;
+  left: 0;
+  font-size: 18px;
+  font-weight: bold;
+  vertical-align: middle;
+  line-height: 20px;
+  color: #FE6500;
+}
+
+.questionLink a:hover {
+  text-decoration: underline;
 }
 /*# sourceMappingURL=style7.css.map */
