--- a/css/style7.css
+++ b/css/style7.css
@@ -4661,8 +4661,12 @@ aside {
   margin-left: 15px;
 }
 
-.questionLink a:before {
-  content: "?";
+.questionLink a:hover {
+  text-decoration: underline;
+}
+
+.questionLink a:before:before {
+  content: "·";
   position: absolute;
   left: 0;
   font-size: 18px;
@@ -4672,7 +4676,11 @@ aside {
   color: #FE6500;
 }
 
-.questionLink a:hover {
-  text-decoration: underline;
+.questionLink a:before:nth-child(3n+1):before {
+  color: #f0e652;
+}
+
+.questionLink a:before:nth-child(3n+3):before {
+  color: #4ccef0;
 }
 /*# sourceMappingURL=style7.css.map */
