--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1602,7 +1602,7 @@ aside {
     text-decoration: underline;
   }
 
-  .questionLink a:before:before {
+  .questionLink a:before {
     content: "·";
     position: absolute;
     left: 0;
