--- a/css/style7.css
+++ b/css/style7.css
@@ -4665,7 +4665,7 @@ aside {
   text-decoration: underline;
 }
 
-.questionLink a:before:before {
+.questionLink a:before {
   content: "·";
   position: absolute;
   left: 0;
