--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -373,8 +373,7 @@
                                 <p>Children love spending time with their friends. </p>
                             </li>
                             <li>
-                                <p>Friends love learning together. 
-                                    Uncertainty </p>
+                                <p>Friends love learning together. </p>
                             </li>
                         </ol>
                         <h5 class="h5">
@@ -475,8 +474,7 @@
                         </div>
                         <p class="mb-middle">
                             <strong>Note: </strong>
-                            In appreciation of the parent organizer of the My Friends online learning pod, we offer a "thank you" discount. Details will be made available upon registration. 
-                            The 
+                            In appreciation of the parent organizer of the My Friends online learning pod, we offer a "thank you" discount. Details will be made available upon registration.  
                         </p>
                         <h4 class="h4"><a href="#" style="text-decoration: none;">Find Classes to Fit your Child’s Grade Level</a></h4>
                         <div id="schemes" class="pb-text mb-middle">
@@ -753,7 +751,7 @@
             </div>
         </section>
     </div>
-    <script>
+    <!-- <script>
         jQuery(document).ready(function($){
             $('.face2').each(function () {
                  $(this).hide();
@@ -765,7 +763,7 @@
                  });
              })
          });
-    </script>
+    </script> -->
 </div>
 
 <div class="theme-footer theme-clear-fix">
