--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -143,29 +143,7 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="#"><span></span> <i>My Friends </i> Online</a>
                 </li>
-                <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/school-programs">After School</a>
-                    <ul>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes"><span></span>Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades"><span></span>Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age"><span></span>Classes by Age</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts"><span></span>Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics"><span></span>Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding"><span></span>Coding</a>
-                        </li>
-                    </ul>
-                </li> -->
+
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="#"><span></span> 1:1 Tutoring</a>
                 </li>
@@ -204,7 +182,7 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="/contact"><span></span>Contact</a>
                 </li>
-                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
                     <a href="#"><span></span>Free Trial!</a>
                 </li>
             </ul>
