--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1606,7 +1606,7 @@ aside {
     content: "·";
     position: absolute;
     left: 0;
-    font-size: 35x;
+    font-size: 35px;
     font-weight: bold;
     vertical-align: middle;
     line-height: 15px;
