--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -204,7 +204,7 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="/contact"><span></span>Contact</a>
                 </li>
-                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
+                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
                     <a href="#"><span></span>Free Trial!</a>
                 </li>
             </ul>
