--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1614,14 +1614,10 @@ aside {
   }
   
 
-  .menu-item-special{
-    color: #eb6f61!important;
-    background-color: #fff!important;
-  }
-
   .menu-item-special a{
     color:  #eb6f61!important;
     background-color: #fff!important;
+    font-weight: bold!important;
   }
 
   .menu-item-special:hover{
