--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -365,7 +365,9 @@
                         </h3>
                         <ol>
                             <li>
-                                <p>Computer: For the BEST classroom experience, we recommend a computer (laptop/desktop). Tablets, iPads, Chromebooks can only be used for select classes (as noted in the class descriptions. If you choose to use an iPad/tablet, we highly recommend a second device so that your child can use zoom to interact with the instructor and class. 
+                                <p>
+                                    <strong>Computer: For the BEST classroom experience, we recommend a computer (laptop/desktop).</strong>
+                                     Tablets, iPads, Chromebooks can only be used for select classes (as noted in the class descriptions. If you choose to use an iPad/tablet, we highly recommend a second device so that your child can use zoom to interact with the instructor and class. 
                                 </p>
                             </li>
                             <li>
