--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -339,7 +339,7 @@
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
         <section  class="sectionheader" style="
-        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;">
+        background-image:url(/CA/uploads/online-class.jpg); background-position: center,0 33%; background-size: auto, cover;padding-top:60px;padding-bottom:60px;">
             <div class="container">
                 <div class="rows">
                     <article>
