--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -205,8 +205,8 @@
     <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
         <a href="/contact"><span></span>Contact</a>
     </li>
-    <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-        <a class="orangeText" href="#"><span></span> <strong>FREE TRIAL</strong> </a>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
+        <a href="#"><span></span>Free Trial!</a>
     </li>
 </ul>
 </div>
